# mediquote

./: README.md  package-lock.json
mediquote/client/: angular.json  package.json
mediquote/client/src/app/model/: response.model.ts
mediquote/client/src/app/request-insurance/: request-insurance.component.html  request-insurance.component.spec.ts  request-insurance.component.ts
mediquote/client/src/app/result/: result.component.css  result.component.html  result.component.ts
mediquote/client/src/app/service/: insurance.service.ts
mediquote/server/: .gitignore  app.py  data.txt  pyproject.toml  test_app.py
mediquote/server/models/: decision_tree.joblib  random_forest.joblib  standard_scaler.joblib
model_dev/: .gitignore  model-dev.ipynb  pyproject.toml
model_dev/models/: mlp.pt  xgboost.joblib
model_dev/res/: dtree_viz
src/app/: app-routing.module.ts  app.module.ts
src/app/model/: insurance-request-model.ts  response.model.ts
src/app/request-insurance/: request-insurance.component.css  request-insurance.component.html  request-insurance.component.ts
src/app/result/: result.component.ts
src/app/service/: insurance.service.ts
