[tool.poetry]
name = "mediquote-server"
version = "0.1.0"
description = "API server for MediQuote. Mainly for serving model inference endpoint."
authors = ["hongjiaherng <jiaherng2001@gmail.com>"]
readme = "README.md"
packages = [{include = "mediquote_server"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
