[tool.poetry]
name = "mediquote-server"
version = "0.1.0"
description = "API server for MediQuote. Mainly for serving model inference endpoint."
authors = ["hongjiaherng <jiaherng2001@gmail.com>"]
readme = "README.md"
packages = [{include = "mediquote_server"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
pandas = "^2.0.2"
xgboost = "^1.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
